api dockerfile rewritten and tested

--- a/.env.example
+++ b/.env.example
@@ -116,7 +116,8 @@ ED_ADMISSIONS_MODEL_PORT=9999
 # ===================================================================== #
 
 # Run all containers with HYUI_UID & GID=0 as per OpenShift recommendations
-HYLODE_UID=9999
+HYUI_USER=hyui
+HYUI=9998
 
 # SET THE ENVIRONMENT
 ENV=dev
