dummy .env for github actions

--- a/.env.github_actions
+++ b/.env.github_actions
@@ -1,6 +1,8 @@
-# ./.env.example
+# ./.env.github_actions
 #   --------------------------------------------------------
-#   DO **NOT** PLACE UNDER VERSION CONTROL
+#   STAND-IN FILE that permits `env_file` to be set in
+#   docker-compose which we rename as .env to
+#   allow github actions to run
 #   --------------------------------------------------------
 
 # Environment variables go here, and can be read in by Python using `os.getenv`:
@@ -131,4 +133,5 @@ PYTHONUNBUFFERED=1
 # Set GITHUB_ACTIONS to True via the ./.github/workflows/main.yml config
 # then use pytest.skipif to block tests that will necessarily fail on github
 # e.g. where .secrets are involved
-GITHUB_ACTIONS=False
+DOCKER=True
+GITHUB_ACTIONS=True
