--- a/.env.example
+++ b/.env.example
@@ -132,3 +132,4 @@ PYTHONUNBUFFERED=1
 # then use pytest.skipif to block tests that will necessarily fail on github
 # e.g. where .secrets are involved
 GITHUB_ACTIONS=False
+NO_SECRETS_FILE=False
