wip to test github actions

--- a/.env.example
+++ b/.env.example
@@ -130,6 +130,6 @@ PYTHONUNBUFFERED=1
 
 # Set GITHUB_ACTIONS to True via the ./.github/workflows/main.yml config
 # then use pytest.skipif to block tests that will necessarily fail on github
-# e.g. where .secrets are involved
+# e.g. where .env are involved
 GITHUB_ACTIONS=False
-NO_SECRETS_FILE=False
+DOCKER=False
