--- a/mypy.ini
+++ b/mypy.ini
@@ -30,7 +30,7 @@ ignore_missing_imports = True
 [mypy-api.*]
 ignore_missing_imports = True
 
-[mypy-app.*]
+[mypy-apps.*]
 ignore_missing_imports = True
 
 [mypy-config.*]
