--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,12 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - dev
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -60,17 +63,17 @@ jobs:
           set -o allexport; source .env; set +o allexport
           make testdocker
 
-  test_e2e:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
+  # test_e2e:
+  #   # The type of runner that the job will run on
+  #   runs-on: ubuntu-20.04
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-      - name: Set-up docker network
-        run: |
-          mv .env.github_actions .env
-          set -o allexport; source .env; set +o allexport
-          docker compose up -d
-          docker compose run playwright
+  #   # Steps represent a sequence of tasks that will be executed as part of the job
+  #   steps:
+  #     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+  #     - uses: actions/checkout@v3
+  #     - name: Set-up docker network
+  #       run: |
+  #         mv .env.github_actions .env
+  #         set -o allexport; source .env; set +o allexport
+  #         docker compose up -d
+  #         docker compose run playwright
