trying direct export of HYUI_UID

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,7 @@ jobs:
         run: |
           mv .env.github_actions .env
           set -o allexport; source .env; set +o allexport
+          export HYUI_UID=9998
           docker compose up -d --build
           docker compose exec api pytest tests/unit
           docker compose exec apps pytest tests/unit
