local docker testing ok

--- a/.env.example
+++ b/.env.example
@@ -116,7 +116,7 @@ ED_ADMISSIONS_MODEL_PORT=9999
 # ===================================================================== #
 
 # Run all containers with HYUI_UID & GID=0 as per OpenShift recommendations
-HYUI=9998
+HYUI_UID=9998
 
 # SET THE ENVIRONMENT
 ENV=dev
