force build in github actions for e2e

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,5 +81,5 @@ jobs:
           mv .env.github_actions .env
           set -o allexport; source .env; set +o allexport
           export HYUI_UID=9998
-          docker compose up -d
+          docker compose up -d --build
           docker compose run playwright
