--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -14,5 +14,6 @@ testpaths =
 
 markers =
     smoke: smoke tests to define base functionality
-    unit: unit tests
+    api: api unit tests
+    app: app unit tests
     e2e: end-2-end tests
