modifications for debugging python scripts in dockr

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,9 @@ services:
       - .env
     depends_on:
       - api
+    # the following permits use of the python debugger
+    stdin_open: true
+    tty: true
 
   playwright:
     build:
