--- a/src/Dockerfile.playwright
+++ b/src/Dockerfile.playwright
@@ -1,4 +1,5 @@
-FROM mcr.microsoft.com/playwright:v1.22.0-focal
+
+FROM mcr.microsoft.com/playwright:v1.23.1-focal
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
@@ -16,9 +17,10 @@ RUN apt-get update && \
         build-essential && \
    apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# # install shared requirements
-# COPY ./requirements.txt .
-# RUN pip3 install --no-cache-dir -r requirements.txt
+# https://playwright.dev/python/docs/ci
+# install playwright
+RUN pip install playwright
+RUN playwright install --with-deps
 
 # install requirements for playwright (incl those in conftest)
 COPY ./tests/requirements.txt .
