build local beds database and datamodel w fastapi

--- a/dev/steve/environment.yml
+++ b/dev/steve/environment.yml
@@ -39,4 +39,5 @@ dependencies:
   - pip:
       - playwright # microsoft::playwright # not available for macm1
       - pytest-playwright
+      - fastapi-crudrouter
 prefix: /opt/homebrew/Caskroom/miniforge/base/envs/hyuiv4
