--- a/.env.example
+++ b/.env.example
@@ -120,6 +120,8 @@ HYUI_UID=9998
 
 # SET THE ENVIRONMENT
 ENV=dev
+# REPLACE WITH GAE URL
+HOST_URL=http://localhost
 
 # Add the working directory to `PYTHONPATH`; allows Jupyter notebooks in the `notebooks` folder to import `src`
 # PYTHONPATH="${PYTHONPATH}:${PWD}"
