failed attempt to get postgres running in docker

--- a/.env.example
+++ b/.env.example
@@ -114,13 +114,19 @@ ED_ADMISSIONS_MODEL_PORT=9999
 # ===================================================================== #
 # HYUI
 # ===================================================================== #
+# HYUI data store
+HYUI_DB_HOST=postgres
+HYUI_DB_PORT=5442
+HYUI_DB_NAME=HYUI
+HYUI_DB_USER=HYLODE
+HYUI_DB_PASSWORD=
 
 # Run all containers with HYUI_UID & GID=0 as per OpenShift recommendations
 HYUI_UID=9998
 
 # SET THE ENVIRONMENT
 ENV=dev
-# REPLACE WITH GAE URL
+# TODO: REPLACE WITH GAE URL
 HOST_URL=http://localhost
 
 # Add the working directory to `PYTHONPATH`; allows Jupyter notebooks in the `notebooks` folder to import `src`
@@ -129,6 +135,12 @@ HOST_URL=http://localhost
 PYTHONPATH="${PYTHONPATH}:src"
 PYTHONDONTWRITEBYTECODE=1
 PYTHONUNBUFFERED=1
+# COPIED from docker/.core.env.sample
+LANG=en_GB.UTF-8
+LC_ALL=en_GB.UTF-8
+LOG_ROOT_DIR=/logs
+PGTZ=Europe/London
+TZ=Europe/London
 
 # Set GITHUB_ACTIONS to True via the ./.github/workflows/main.yml config
 # then use pytest.skipif to block tests that will necessarily fail on github
