--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,15 @@ x-caboodle-credentials: &caboodle-credentials
   CABOODLE_DB_USER: ${CABOODLE_DB_USER}
   CABOODLE_DB_PASSWORD: ${CABOODLE_DB_PASSWORD}
 
+# TODO: merge into HYLODE database
+x-HYUI-common-env: &HYUI-common-env
+  HYUI_ENV: ${HYUI_ENV}
+  HYUI_DB_HOST: ${HYUI_DB_HOST}
+  HYUI_DB_PORT: ${HYUI_DB_PORT}
+  HYUI_DB_NAME: ${HYUI_DB_NAME}
+  HYUI_DB_USER: ${HYUI_DB_USER}
+  HYUI_DB_PASSWORD: ${HYUI_DB_PASSWORD}
+
 services:
 
   # API docker image / reads and wrangles data
@@ -126,19 +135,43 @@ services:
       - baserow_data:/baserow/data
  
 
-  db:
-    image: postgres
-    restart: always
+  postgres:
+    build:
+      context: ./src
+      dockerfile: Dockerfile.postgres
+      args:
+        <<: *build-args-common
     environment:
-      POSTGRES_PASSWORD: example
+      # POSTGRES_USER: ${HYUI_DB_USER}
+      # POSTGRES_PASSWORD: ${HYUI_DB_PASSWORD}
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - LANG=${LANG}
+      - LC_ALL=${LC_ALL}
+      - PGTZ=${PGTZ}
+      - TZ=${TZ}
+    command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
+    restart: always
+    ports:
+      - "${HYUI_DB_PORT}:5432"
+    volumes:
+      - type: volume
+        source: baserow_db
+        target: /var/lib/postgresql/data
+    # healthcheck:
+    #   test: [ "CMD", "pg_isready", "-U", "${HYUI_DB_USER}" ]
+    #   interval: 10s
+    #   timeout: 30s
+    #   retries: 5
 
   adminer:
     image: adminer
     restart: always
     ports:
-      - 8098:8080 
+      - 8099:8080 
 
 # top level docker volume - cannot link to local dir
 # but if I use local postgres then don't think this matters 
 volumes:
   baserow_data:
+  baserow_db:
