--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,45 +133,56 @@ services:
     volumes:
       # test username:password steve:hylode22
       - baserow_data:/baserow/data
- 
+
 
   postgres:
-    build:
-      context: ./src
-      dockerfile: Dockerfile.postgres
-      args:
-        <<: *build-args-common
+    image: postgres:12-buster
+    restart: always
     environment:
-      # POSTGRES_USER: ${HYUI_DB_USER}
-      # POSTGRES_PASSWORD: ${HYUI_DB_PASSWORD}
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - LANG=${LANG}
-      - LC_ALL=${LC_ALL}
-      - PGTZ=${PGTZ}
-      - TZ=${TZ}
-    command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
-    restart: always
     ports:
-      - "${HYUI_DB_PORT}:5432"
+      - '5442:5432'
     volumes:
-      - type: volume
-        source: baserow_db
-        target: /var/lib/postgresql/data
-    # healthcheck:
-    #   test: [ "CMD", "pg_isready", "-U", "${HYUI_DB_USER}" ]
-    #   interval: 10s
-    #   timeout: 30s
+      - baserow_db:/var/lib/postgresql/data
+  # postgres:
+  #   build:
+  #     context: ./src
+  #     dockerfile: Dockerfile.postgres
+  #     args:
+  #       <<: *build-args-common
+  #   environment:
+  #     # POSTGRES_USER: ${HYUI_DB_USER}
+  #     # POSTGRES_PASSWORD: ${HYUI_DB_PASSWORD}
+  #     - POSTGRES_USER=postgres
+  #     - POSTGRES_PASSWORD=postgres
+  #     - LANG=${LANG}
+  #     - LC_ALL=${LC_ALL}
+  #     - PGTZ=${PGTZ}
+  #     - TZ=${TZ}
+  #   command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
+  #   restart: always
+  #   ports:
+  #     - "${HYUI_DB_PORT}:5432"
+  #   volumes:
+  #     - type: volume
+  #       source: baserow_db
+  #       target: /var/lib/postgresql/data
+  #   # healthcheck:
+  #   #   test: [ "CMD", "pg_isready", "-U", "${HYUI_DB_USER}" ]
+  #   #   interval: 10s
+  #   #   timeout: 30s
     #   retries: 5
 
   adminer:
     image: adminer
     restart: always
     ports:
-      - 8099:8080 
+      - 8099:8080
 
 # top level docker volume - cannot link to local dir
-# but if I use local postgres then don't think this matters 
+# but if I use local postgres then don't think this matters
 volumes:
   baserow_data:
   baserow_db:
+    # driver: local
