added postgres and tools to docker-compose

--- a/.env.example
+++ b/.env.example
@@ -116,9 +116,9 @@ ED_ADMISSIONS_MODEL_PORT=9999
 # ===================================================================== #
 # HYUI data store
 HYUI_DB_HOST=postgres
-HYUI_DB_PORT=5442
-HYUI_DB_NAME=HYUI
-HYUI_DB_USER=HYLODE
+HYUI_DB_PORT=5442 # external port
+HYUI_DB_NAME=hyui
+HYUI_DB_USER=hyui
 HYUI_DB_PASSWORD=
 
 # Run all containers with HYUI_UID & GID=0 as per OpenShift recommendations
