--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,6 +120,8 @@ services:
   baserow:
     container_name: baserow
     image: baserow/baserow:1.10.2
+    env_file:
+      - .env
     environment:
       # TODO switch to .env definition
       # BASEROW_PUBLIC_URL: "${HOST_URL}:8097""
@@ -140,9 +142,11 @@ services:
   postgres:
     image: postgres:12-buster
     restart: always
+    env_file:
+      - .env
     environment:
-      - POSTGRES_USER=${HYUI_DB_USER}
-      - POSTGRES_PASSWORD=${HYUI_DB_PASSWORD}
+      POSTGRES_USER: ${HYUI_DB_USER}
+      POSTGRES_PASSWORD: ${HYUI_DB_PASSWORD}
     ports:
       - "${HYUI_DB_PORT}:5432"
     volumes:
@@ -151,12 +155,14 @@ services:
   pgweb:
     image: sosedoff/pgweb
     restart: always
+    env_file:
+      - .env
     ports:
       - "8099:8081"
     links:
       - postgres:postgres
     environment:
-      - DATABASE_URL="postgres://${HYUI_DB_USER}:${HYUI_DB_PASSWORD}@postgres:5432/${HYUI_DB_NAME}?sslmode=disable"
+      DATABASE_URL: "postgres://${HYUI_DB_USER}:${HYUI_DB_PASSWORD}@postgres:5432/${HYUI_DB_NAME}?sslmode=disable"
     depends_on:
       - postgres
 
