working docker-compose incl baserow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,8 +122,9 @@ services:
     image: baserow/baserow:1.10.2
     environment:
       # TODO switch to .env definition
-      # BASEROW_PUBLIC_URL: "${HOST_URL}:8097""
-      BASEROW_PUBLIC_URL: "http://localhost:8097"
+      # BASEROW_PUBLIC_URL: "${HOST_URL}:8097"
+      # BASEROW_PUBLIC_URL: "http://localhost:8097"
+      BASEROW_PUBLIC_URL: "http://uclvlddpragae07:8097"
       # TODO: define this in .env and switch to UDS at UCLH
       # DATABASE_URL: "postgresql://steve:@host.docker.internal:5432/hyui"
       DATABASE_URL: "postgres://${HYUI_DB_USER}:${HYUI_DB_PASSWORD}@postgres:5432/${HYUI_DB_NAME}?sslmode=disable"
@@ -156,7 +157,7 @@ services:
     links:
       - postgres:postgres
     environment:
-      - DATABASE_URL="postgres://${HYUI_DB_USER}:${HYUI_DB_PASSWORD}@postgres:5432/${HYUI_DB_NAME}?sslmode=disable"
+      - DATABASE_URL=postgres://${HYUI_DB_USER}:${HYUI_DB_PASSWORD}@postgres:5432/${HYUI_DB_NAME}?sslmode=disable
     depends_on:
       - postgres
 
