tidying env variables and docker-compose

--- a/.env.example
+++ b/.env.example
@@ -126,8 +126,8 @@ HYUI_UID=9998
 
 # SET THE ENVIRONMENT
 ENV=dev
-# TODO: REPLACE WITH GAE URL
-HOST_URL=http://localhost
+# Replace with actual host in production
+BASEROW_PUBLIC_URL=http://localhost:8097
 
 # Add the working directory to `PYTHONPATH`; allows Jupyter notebooks in the `notebooks` folder to import `src`
 # PYTHONPATH="${PYTHONPATH}:${PWD}"
