method for extracting non-pid data from baserow

--- a/.gitignore
+++ b/.gitignore
@@ -873,6 +873,7 @@ data/external/*
 data/raw/*
 data/interim/*
 data/processed/*
+data/backups/*
 !data/external/.gitkeep
 !data/raw/.gitkeep
 !data/interim/.gitkeep
