Create admission probability api and recurring background job

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       args:
         <<: *build-args-common
     # NOTE: the --reload flag means that edits are automtically redeployed
-    command: uvicorn api.main:app --workers 1 --host 0.0.0.0 --port 8094
+    command: ./api/run.sh
     ports:
       - "8094:8094"
     expose:
