--- a/src/Dockerfile.api
+++ b/src/Dockerfile.api
@@ -64,10 +64,4 @@ COPY --chown=hyui:root . .
 
 EXPOSE 8094
 
-# command: uvicorn api.main:app --reload --workers 1 --host 0.0.0.0 --port 8094
-CMD ["uvicorn", "api.main:app", \
-    "--reload", \
-    "--workers", "1", \
-    "--host", "0.0.0.0", \
-    "--port", "8094", \
-]
+CMD ["./api/run.sh"]
