--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,7 +40,7 @@ repos:
     hooks:
       - id: flake8
         name: flake8 - Python linting
-  - repo: https://github.com/nbQA-dev/nbQA.git
+  - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.3.1
     hooks:
       - id: nbqa-isort
