--- a/.env.example
+++ b/.env.example
@@ -114,20 +114,43 @@ ED_ADMISSIONS_MODEL_PORT=9999
 # ===================================================================== #
 # HYUI
 # ===================================================================== #
+# SET THE ENVIRONMENT
+ENV=dev
+# SET THE BASEURL
+BASE_URL=http://localhost
+BASE_URL_DEV=http://localhost
+BASE_URL_TEST=http://172.16.149.205
+BASE_URL_PROD=http://172.16.149.202
+
+# SET THE PORTS
+PORT_JUPYTER=8091
+
+PORT_COMMANDLINE_API=8092
+PORT_DOCKER_API=8094
+
+PORT_COMMANDLINE_APP=8093
+PORT_DOCKER_APP=8095
+
+PORT_DOCKER_BASEROW=80
+
+# ===================================================================== #
+
 # HYUI data store
 HYUI_DB_HOST=postgres
-HYUI_DB_PORT=5442 # external port
+HYUI_DB_PORT=5442
 HYUI_DB_NAME=hyui
 HYUI_DB_USER=hyui
 HYUI_DB_PASSWORD=
 
+# set the baserow url separately as needed to compose the public url
+BASEROW_URL=http://172.16.149.202
+BASEROW_PORT=8097
+BASEROW_READWRITE_TOKEN=
+
 # Run all containers with HYUI_UID & GID=0 as per OpenShift recommendations
 HYUI_UID=9998
 
-# SET THE ENVIRONMENT
-ENV=dev
-# Replace with actual host in production
-BASEROW_PUBLIC_URL=http://localhost:8097
+
 
 # Add the working directory to `PYTHONPATH`; allows Jupyter notebooks in the `notebooks` folder to import `src`
 # PYTHONPATH="${PYTHONPATH}:${PWD}"
