extended and formatted authentication

--- a/.env.example
+++ b/.env.example
@@ -116,6 +116,12 @@ ED_ADMISSIONS_MODEL_PORT=9999
 # ===================================================================== #
 # SET THE ENVIRONMENT
 ENV=dev
+
+# AUTHENTICATION
+HYUI_USER=
+HYUI_PASSWORD=
+SECRET_KEY=
+
 # SET THE BASEURL
 BASE_URL=http://localhost
 BASE_URL_DEV=http://localhost
