--- a/.env.github_actions
+++ b/.env.github_actions
@@ -31,7 +31,7 @@
 # DIR_DATA=$(pwd)/src/data
 
 # Add environment variables for the `docs` directory
-DIR_DOCS=$(pwd)/docs
+# DIR_DOCS=$(pwd)/docs
 
 # Add environment variables for the `notebooks` directory
 DIR_NOTEBOOKS=$(pwd)/notebooks
