--- a/.env.github_actions
+++ b/.env.github_actions
@@ -34,21 +34,11 @@
 # DIR_DOCS=$(pwd)/docs
 
 # Add environment variables for the `notebooks` directory
-DIR_NOTEBOOKS=$(pwd)/notebooks
+#DIR_NOTEBOOKS=$(pwd)/notebooks
 
 # Add environment variables for the `outputs` directory
-DIR_OUTPUTS=$(pwd)/src/outputs
+#DIR_OUTPUTS=$(pwd)/src/outputs
 
-# Add environment variables for the `src` directories
-DIR_SRC=$(pwd)/src
-DIR_SRC_UTILS=$(pwd)/src/utils
-DIR_SRC_CONFIG=$(pwd)/src/config
-DIR_SRC_API=$(pwd)/src/api
-DIR_SRC_APP=$(pwd)/src/app
-DIR_SRC_MOCK=$(pwd)/src/mock
-
-# Add environment variables for the `tests` directory
-DIR_TESTS=$(pwd)/tests
 
 
 # ===================================================================== #
