--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,87 +75,87 @@ services:
 
   # Dash (Plotly) docker image / web app that visualises results
   # reads data via requests from api app
-  apps:
-    build:
-      context: ./src
-      dockerfile: Dockerfile.apps
-      args:
-        <<: *build-args-common
-    command: gunicorn --bind 0.0.0.0:8095 -w 4 -k gevent --worker-tmp-dir /dev/shm apps.app:server
-    ports:
-      - "8095:8095"
-    environment:
-      <<: *proxy-common
-      <<: *hyui-common-env
-    env_file:
-      - .env
-    depends_on:
-      - api
-    # the following permits use of the python debugger
-    stdin_open: true
-    tty: true
+  # apps:
+  #   build:
+  #     context: ./src
+  #     dockerfile: Dockerfile.apps
+  #     args:
+  #       <<: *build-args-common
+  #   command: gunicorn --bind 0.0.0.0:8095 -w 4 -k gevent --worker-tmp-dir /dev/shm apps.app:server
+  #   ports:
+  #     - "8095:8095"
+  #   environment:
+  #     <<: *proxy-common
+  #     <<: *hyui-common-env
+  #   env_file:
+  #     - .env
+  #   depends_on:
+  #     - api
+  #   # the following permits use of the python debugger
+  #   stdin_open: true
+  #   tty: true
 
-  playwright:
-    build:
-      context: ./src
-      dockerfile: Dockerfile.playwright
-      args:
-        <<: *build-args-common
-    command: ./wait-for http://apps:8095 -- pytest -m e2e src/tests/playwright
-    volumes:
-      - ./src:/src
-    environment:
-      <<: *proxy-common
-      <<: *hyui-common-env
-      Docker: "True"
-    env_file:
-      - .env
-    # depends on does not 'wait'
-    depends_on:
-      - api
-      - apps
-    profiles:
-      - testing
+  # playwright:
+  #   build:
+  #     context: ./src
+  #     dockerfile: Dockerfile.playwright
+  #     args:
+  #       <<: *build-args-common
+  #   command: ./wait-for http://apps:8095 -- pytest -m e2e src/tests/playwright
+  #   volumes:
+  #     - ./src:/src
+  #   environment:
+  #     <<: *proxy-common
+  #     <<: *hyui-common-env
+  #     Docker: "True"
+  #   env_file:
+  #     - .env
+  #   # depends on does not 'wait'
+  #   depends_on:
+  #     - api
+  #     - apps
+  #   profiles:
+  #     - testing
 
-  baserow:
-    container_name: baserow
-    image: baserow/baserow:1.10.2
-    environment:
-      BASEROW_PUBLIC_URL: "${BASEROW_URL}:${BASEROW_PORT}"
-      WEB_FRONTEND_PORT: "${BASEROW_PORT}"
-      DATABASE_URL: "postgres://${HYUI_DB_USER}:${HYUI_DB_PASSWORD}@postgres:5432/${HYUI_DB_NAME}?sslmode=disable"
-      BASEROW_EXTRA_ALLOWED_HOSTS: "baserow"
-    ports:
-      - "8097:80"
-    expose:
-      - "8097"
-    volumes:
-      - baserow_data:/baserow/data
-    depends_on:
-      - postgres
+  # baserow:
+  #   container_name: baserow
+  #   image: baserow/baserow:1.10.2
+  #   environment:
+  #     BASEROW_PUBLIC_URL: "${BASEROW_URL}:${BASEROW_PORT}"
+  #     WEB_FRONTEND_PORT: "${BASEROW_PORT}"
+  #     DATABASE_URL: "postgres://${HYUI_DB_USER}:${HYUI_DB_PASSWORD}@postgres:5432/${HYUI_DB_NAME}?sslmode=disable"
+  #     BASEROW_EXTRA_ALLOWED_HOSTS: "baserow"
+  #   ports:
+  #     - "8097:80"
+  #   expose:
+  #     - "8097"
+  #   volumes:
+  #     - baserow_data:/baserow/data
+  #   depends_on:
+  #     - postgres
 
-  postgres:
-    image: postgres:12-buster
-    restart: always
-    environment:
-      - POSTGRES_USER=${HYUI_DB_USER}
-      - POSTGRES_PASSWORD=${HYUI_DB_PASSWORD}
-    ports:
-      - "${HYUI_DB_PORT}:5432"
-    volumes:
-      - baserow_db:/var/lib/postgresql/data
+  # postgres:
+  #   image: postgres:12-buster
+  #   restart: always
+  #   environment:
+  #     - POSTGRES_USER=${HYUI_DB_USER}
+  #     - POSTGRES_PASSWORD=${HYUI_DB_PASSWORD}
+  #   ports:
+  #     - "${HYUI_DB_PORT}:5432"
+  #   volumes:
+  #     - baserow_db:/var/lib/postgresql/data
 
-  pgweb:
-    image: sosedoff/pgweb
-    restart: always
-    ports:
-      - "8099:8081"
-    links:
-      - postgres:postgres
-    environment:
-      DATABASE_URL: "postgres://${HYUI_DB_USER}:${HYUI_DB_PASSWORD}@postgres:5432/${HYUI_DB_NAME}?sslmode=disable"
-    depends_on:
-      - postgres
+  # pgweb:
+  #   image: sosedoff/pgweb
+  #   restart: always
+  #   ports:
+  #     - "8099:8081"
+  #   links:
+  #     - postgres:postgres
+  #   environment:
+  #     DATABASE_URL: "postgres://${HYUI_DB_USER}:${HYUI_DB_PASSWORD}@postgres:5432/${HYUI_DB_NAME}?sslmode=disable"
+  #   depends_on:
+  #     - postgres
 
 # top level docker volume - cannot link to local dir
 # but if I use local postgres then don't think this matters
