--- a/.env.github_actions
+++ b/.env.github_actions
@@ -125,3 +125,14 @@ PYTHONUNBUFFERED=1
 # e.g. where .secrets are involved
 DOCKER=True
 GITHUB_ACTIONS=True
+
+HTTPS_PROXY=
+HTTPS_PROXY=
+
+
+# HYUI data store
+HYUI_DB_HOST=postgres
+HYUI_DB_PORT=5442
+HYUI_DB_NAME=hyui
+HYUI_DB_USER=hyui
+HYUI_DB_PASSWORD=
