--- a/.env.github_actions
+++ b/.env.github_actions
@@ -126,7 +126,7 @@ PYTHONUNBUFFERED=1
 DOCKER=True
 GITHUB_ACTIONS=True
 
-HTTPS_PROXY=
+HTTP_PROXY=
 HTTPS_PROXY=
 
 
@@ -136,3 +136,5 @@ HYUI_DB_PORT=5442
 HYUI_DB_NAME=hyui
 HYUI_DB_USER=hyui
 HYUI_DB_PASSWORD=
+
+HYUI_ENV=dev
