work around for broken tests

--- a/.env.example
+++ b/.env.example
@@ -116,6 +116,7 @@ ED_ADMISSIONS_MODEL_PORT=9999
 # ===================================================================== #
 # SET THE ENVIRONMENT
 ENV=dev
+TEST_LEVEL=SKIP_BROKEN_TESTS
 
 # AUTHENTICATION
 HYUI_USER=
